# custom-neural-network

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/arc/: exit11_2.txt  exit12_10.txt  exit13_2.txt  exit15_5.txt  exit16_1.txt  exit17_10.txt  exit19_1.txt  exit20_1.txt  exit21_1.txt  exit24_1.txt  exit24_10.txt  exit27_2.txt  exit2_100.txt  exit2_5.txt  exit31_2.txt  exit31_5.txt  exit36_5.txt  exit37_5.txt  exit3_10.txt  exit56_5.txt  exit5_10.txt  exit65_1.txt  exit70_5.txt  exit76_1.txt  exit7_5.txt  exit85_1.txt  exit90_1.txt  exit94_5.txt  exit97_1.txt  exit9_10.txt  nw11_1.txt  nw54_5.txt  nw78_1.txt
include/: convolayer.hpp  denselayer.hpp  layer.hpp  pseument.hpp
old_nn_tests/: draw.cpp  nums.cpp  xor.cpp
src/: convolayer.cpp  denselayer.cpp  main.cpp  pseument.cpp
